# Image_Processing_Algorithms

./: .gitignore  CMakeLists.txt  README.md
include/: Image_Processing_Algorithms.h  utils.h
include/color/: color_space.h  grayscale.h
include/filter/: filter_alg.h  filter_kernel.h  noise_induction.h  sobel_filter.h
include/geometry/: flip.h  resize.h
include/recognition/: color_segmentation_h  detection.h
include/utils/: image_utils.h
src/: Image_Processing_Algorithms.cpp  utils.cpp
src/color/: color_space.cpp  grayscale.cpp
src/filter/: filter_alg.cpp  filter_kernel.cpp  noise_induction.cpp  sobel_filter.cpp
src/geometry/: flip.cpp  resize.cpp
src/recognition/: detection.cpp
src/utils/: image_utils.cpp
